Adapting index.html to the mod

--- a/index.html
+++ b/index.html
@@ -3,25 +3,27 @@
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
 
-    <meta name="keywords" content="idle, incremental, idle, soccer, football, manager, vepro, veprogames"/>
+    <meta name="keywords" content="idle, incremental, idle, soccer, football, manager, villanova, villanovasoft"/>
     <meta name="description" content="An Incremental Game where you manage your own Football Team"/>
-    <meta name="url" content="https://veprogames.github.io/idle-football-manager/"/>
-    <meta name="image" content="https://veprogames.github.io/idle-football-manager/logo.png"/>
+    <meta name="url" content="https://villanovasoft/idle-football-manager/"/>
+    <meta name="image" content="https://villanovasoft.github.io/idle-football-manager/logo.png"/>
     <meta name="theme-color" content="#f2ae3a"/>
 
-    <meta name="og:title" content="Idle Football Manager"/>
+    <meta name="og:title" content="Idle Football Manager Mod"/>
     <meta name="og:type" content="website"/>
-    <meta name="og:description" content="An Incremental Game where you manage your own Football Team"/>
-    <meta name="og:url" content="https://veprogames.github.io/idle-football-manager/"/>
-    <meta name="og:image" content="https://veprogames.github.io/idle-football-manager/logo.png"/>
-
+    <meta name="og:description" content="An modded Incremental Game where you manage your own Football Team"/>
+    <meta name="og:url" content="https://villanovasoft.github.io/idle-football-manager/"/>
+    <meta name="og:image" content="https://villanovasoft.github.io/idle-football-manager/logo.png"/>
+    
+    <!--
     <meta name="twitter:card" content="summary_image_large"/>
     <meta name="twitter:title" content="Idle Football Manager"/>
-    <meta name="twitter:description" content="An Incremental Game where you manage your own Football Team"/>
-    <meta name="twitter:image" content="https://veprogames.github.io/idle-football-manager/logo.png"/>
+    <meta name="twitter:description" content="An modded Incremental Game where you manage your own Football Team"/>
+    <meta name="twitter:image" content="https://villanovasoft.github.io/idle-football-manager/logo.png"/>
     <meta name="twitter:site" content="@veprogames"/>
     <meta name="twitter:creator" content="@veprogames"/>
-
+    -->
+    
     <link rel="stylesheet" href="css/themes/light.css"/>
     <link rel="stylesheet" href="css/main.css"/>
     <link rel="icon" href="icon.ico"/>
