Update index.html (fix)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta name="keywords" content="idle, incremental, idle, soccer, football, manager, villanova, villanovasoft"/>
     <meta name="description" content="An Incremental Game where you manage your own Football Team"/>
-    <meta name="url" content="https://villanovasoft/idle-football-manager/"/>
+    <meta name="url" content="https://villanovasoft.github.io/idle-football-manager/"/>
     <meta name="image" content="https://villanovasoft.github.io/idle-football-manager/logo.png"/>
     <meta name="theme-color" content="#f2ae3a"/>
 
